--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^4.1.2",
     "react-timeago": "^3.4.3",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.71.3"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
