--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-timeago": "^3.4.3",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.71.3"
+    "semantic-ui-react": "^0.71.3",
+    "webix": "^4.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
