--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webix": "^4.4.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
