--- a/package.json
+++ b/package.json
@@ -15,10 +15,18 @@
     "axios": "^0.16.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
+    "casper": "^0.1.1",
+    "casperjs": "^1.1.4",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
+    "jsdom": "^11.1.0",
     "mongoose": "^4.11.5",
     "morgan": "^1.8.2",
+    "node-phantom-async": "^1.3.3",
+    "phantom": "^4.0.5",
+    "phantomjs": "^2.1.7",
+    "postcss-loader": "^2.0.6",
     "react": "^15.2.1",
     "react-addons-update": "^15.6.0",
     "react-dom": "^15.2.1",
@@ -28,7 +36,9 @@
     "react-timeago": "^3.4.3",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "request": "^2.81.0",
     "semantic-ui-react": "^0.71.3",
+    "spooky": "^0.2.5",
     "webix": "^4.4.0"
   },
   "devDependencies": {
