--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "rm -rf build public/bundle.js",
     "build": "babel server --out-dir build --presets=es2015 && webpack",
     "startlocal": "cross-env NODE_ENV=production node ./build/main.js",
-    "start":"node ./build/main.js",
+    "start": "node ./build/main.js",
     "development": "cross-env NODE_ENV=development nodemon --exec babel-node --presets=es2015 ./server/main.js --watch server"
   },
   "author": "",
@@ -26,7 +26,6 @@
     "morgan": "^1.8.2",
     "node-phantom-async": "^1.3.3",
     "phantom": "^4.0.5",
-    "phantomjs": "^2.1.7",
     "postcss-loader": "^2.0.6",
     "react": "^15.2.1",
     "react-addons-update": "^15.6.0",
@@ -38,9 +37,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
-    "semantic-ui-react": "^0.71.3",
-    "spooky": "^0.2.5",
-    "webix": "^4.4.0"
+    "semantic-ui-react": "^0.71.3"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
