--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codelab",
-  "engines":{"node": "7.x.x"},
+  "engines":{"node": "8.1.4"},
   "version": "1.0.0",
   "main": "./build/main.js",
   "scripts": {
