--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "./build/main.js",
   "scripts": {
     "clean": "rm -rf build public/bundle.js",
-    "build": "babel server --out-dir ./ --presets=es2015 && webpack",
+    "build": "babel server --out-dir build --presets=es2015 && webpack",
     "startlocal": "cross-env NODE_ENV=production node ./build/main.js",
-    "start": "node main.js",
+    "start": "node ./build/main.js",
     "development": "cross-env NODE_ENV=development nodemon --exec babel-node --presets=es2015 ./server/main.js --watch server"
   },
   "author": "",
