--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "codelab",
-  "engines":{"node": "8.1.4"},
+  "engines": {
+    "node": "8.1.4"
+  },
   "version": "1.0.0",
   "main": "./build/main.js",
   "scripts": {
@@ -31,6 +33,7 @@
     "react": "^15.2.1",
     "react-addons-update": "^15.6.0",
     "react-dom": "^15.2.1",
+    "react-photonkit": "^0.4.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
