--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsdom": "^11.1.0",
     "mongoose": "^4.11.5",
     "morgan": "^1.8.2",
+    "multiparty": "^4.1.3",
     "node-phantom-async": "^1.3.3",
     "node-sass": "^4.5.3",
     "phantom": "^4.0.5",
@@ -45,6 +46,8 @@
     "request": "^2.81.0",
     "sass-loader": "^6.0.6",
     "semantic-ui-react": "^0.71.3",
+    "three": "^0.86.0",
+    "three-trackballcontrols": "0.0.5",
     "url-loader": "^0.5.9"
   },
   "devDependencies": {
